[gd_scene load_steps=12 format=3 uid="uid://bijoeqe7v55se"]

[ext_resource type="Script" uid="uid://dqotulldkhpsg" path="res://scenes/caster_loop.gd" id="1_1uxto"]
[ext_resource type="Texture2D" uid="uid://ey1j1oj4h5g7" path="res://sprites/caster_loop.png" id="2_1uxto"]
[ext_resource type="PackedScene" uid="uid://lggam6luofdi" path="res://scenes/Shadow.tscn" id="3_j4s56"]
[ext_resource type="Texture2D" uid="uid://dveil8vyd0vom" path="res://sprites/UI/EnemyHealthBar3.png" id="4_r5b7p"]
[ext_resource type="Texture2D" uid="uid://cy8yp2e43qgo0" path="res://sprites/UI/EnemyHealthBar1.png" id="5_jqn8y"]
[ext_resource type="Texture2D" uid="uid://c7tqjxvybdvyu" path="res://sprites/UI/EnemyHealthBar2.png" id="6_vhhko"]
[ext_resource type="PackedScene" uid="uid://cowso8awu5lpp" path="res://components/HealthComponent.tscn" id="7_srqsf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0nrru"]
radius = 2.5

[sub_resource type="AtlasTexture" id="AtlasTexture_kffa8"]
atlas = ExtResource("2_1uxto")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4s56"]
atlas = ExtResource("2_1uxto")
region = Rect2(8, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_s5f2p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kffa8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4s56")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="CasterLoop" type="CharacterBody2D"]
script = ExtResource("1_1uxto")
metadata/_custom_type_script = "uid://jwacied8bgr7"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("CircleShape2D_0nrru")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 3
sprite_frames = SubResource("SpriteFrames_s5f2p")
autoplay = "default"
frame_progress = 0.0689242

[node name="Shadow" parent="." instance=ExtResource("3_j4s56")]
texture_filter = 3

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
visible = false
z_index = 3
offset_left = -4.0
offset_top = -6.0
offset_right = 4.0
offset_bottom = 2.0
texture_under = ExtResource("4_r5b7p")
texture_over = ExtResource("5_jqn8y")
texture_progress = ExtResource("6_vhhko")

[node name="HealthComponent" parent="." instance=ExtResource("7_srqsf")]
Health = 20.0
Max_Health = 20.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="CastTimer" type="Timer" parent="."]
autostart = true

[connection signal="TookDamage" from="." to="." method="_on_took_damage"]
[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="health_depleted" from="HealthComponent" to="." method="_on_health_component_health_depleted"]
[connection signal="timeout" from="CastTimer" to="." method="_on_cast_timer_timeout"]
